--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/proiect-tw
+MONGO_URI=mongodb+srv://iulianaturcanu:parolamea@cluster0.19zgtrl.mongodb.net/proiect-tw?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=secretkey123
 PORT=5000
